# LearningAdaptive

./: .gitignore  Dockerfile  LICENSE  README.md
autonomous_rover/: CMakeLists.txt  diffdrivepi_plugin.xml  package.xml
autonomous_rover/description/: lidar.xacro  oak_camera.xacro  robot.urdf.xacro  ros2_control.xacro
autonomous_rover/hardware/: hardware.cpp
autonomous_rover/hardware/log/: latest_list
autonomous_rover/launch/: robot_control.launch.py  robot_launch.py
docs/: Adaptive DWB Approach.md  AdaptiveControlResearch.md  Github_Usage.md
docs/markdown/: AdaptiveController.md  AutonomousCar_ROS2_Sim.md  Building_an_AutonomousCar.md  DWB_Controller.md  Learning-AdaptiveController.md  Nav2ArchitectureAnalysis.md
matlab/: Robot.asv  Robot.m  SelfTuningRegulator.m  main.asv  main.m  matlab.mat  test.m  test_2link.m
rover_control/: CMakeLists.txt
rover_sim/: package.xml
rover_sim/config/: ekf.yaml  navigation.yaml  slam_mapping.yaml
rover_sim/description/: base_robot.xacro  imu.xacro
rover_sim/launch/: basic_nav.launch.py  robot_control.launch.py  simulation.launch.py
rover_sim/rviz/: slam_mapping.rviz
scripts/: build.sh  launch_pendulum.bash  pigpio_install.sh  ros_install.sh  ros_install_nosudo.sh  teleop.sh  update.sh
src/autonomous_rover/: CMakeLists.txt  package.xml
src/autonomous_rover/config/: rover_control.yaml
src/autonomous_rover/description/: base_robot.xacro  lidar.xacro
src/autonomous_rover/hardware/: DiffDrivePi.cpp  camera_driver_node.cpp
src/autonomous_rover/include/autonomous_rover/: DiffDrivePi.hpp  hardware.hpp
src/autonomous_rover/launch/: camera.launch.py  robot_control.launch.py  robot_launch.py  sensors.launch.py
src/autonomous_rover/maps/: map.pgm  map.yaml
src/autonomous_rover/src/: encoder_calibration_node.cpp  feedback_node.cpp
src/rover_control/: CMakeLists.txt  adaptive_controller.xml  package.xml
src/rover_control/config/: pendulum_controller.yaml
src/rover_control/description/: gazebo.xacro  pendulum.urdf.xacro
src/rover_control/include/rover_control/: adaptive_controller.hpp  self_tuning_regulator.hpp
src/rover_control/launch/: map.launch.py  pendulum.launch.py  robot_display.launch.py  rtabmap.launch.py
src/rover_control/maps/: lab_map.pgm
src/rover_control/src/: adaptive_controller.cpp  pendulum_control_node.cpp  pendulum_node.cpp  self_tuning_regulator.cpp
src/rover_control/worlds/: test.sdf
src/rover_hardware/config/: ekf.yaml  rover_control.yaml
src/rover_hardware/description/: base_robot.xacro  imu.xacro  materials.xacro  oak_camera.xacro  robot.urdf.xacro  ros2_control.xacro
src/rover_hardware/hardware/: DiffDrivePi.cpp  hardware.cpp
src/rover_hardware/launch/: camera.launch.py  robot_launch.py
src/rover_hardware/rviz/: rtabmap.rviz
src/rover_hardware/src/: encoder_calibration_node.cpp  feedback_node.cpp  imu_filter_node.cpp
src/rover_sim/: CMakeLists.txt  package.xml
src/rover_sim/config/: amcl.yaml  ekf.yaml  navigation.yaml  rover_control.yaml  slam_mapping.yaml
src/rover_sim/description/: base_robot.xacro  gazebo_params.xacro  imu.xacro  lidar.xacro  oak_camera.xacro  robot.urdf.xacro  ros2_control.xacro
src/rover_sim/launch/: amcl_localization.launch.py  basic_nav.launch.py  robot_control.launch.py  robot_display.launch.py  rtabmap.launch.py  simulation.launch.py  slam_mapping.launch.py
src/rover_sim/maps/: better_map.pgm  better_map.yaml  lab_map.yaml
src/rover_sim/rviz/: navigation.rviz
src/rover_sim/worlds/: lab2office.sdf  test.sdf
